src/test/deca/context/valid/cmp.deca
{
	4 <= 5.0;
	3.0 > 2;
	6.3 >= 4.2;
	1 < 1;
}
