src/test/deca/context/invalid/affectation-wrongTypeAffectationBoolFloat.deca
{
	float i = 5.3;
    boolean c = true;
    c = i;
}
